Implement author API
