# swagger.json
@@ -57,6 +57,188 @@
           }
         }
       }
+    },
+    "/authors": {
+      "get": {
+        "summary": "Get all authors",
+        "tags": [
+          "Authors"
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of authors"
+          },
+          "500": {
+            "description": "Unable to retrieve authors"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create an author",
+        "tags": [
+          "Authors"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id",
+                  "name",
+                  "birthYear"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "string"
+                  },
+                  "name": {
+                    "type": "string"
+                  },
+                  "birthYear": {
+                    "type": "number"
+                  }
+                }
+              },
+              "example": {
+                "id": "a4",
+                "name": "Example Author",
+                "birthYear": 1980
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Author created successfully"
+          },
+          "400": {
+            "description": "Missing required fields or author ID already exists"
+          },
+          "500": {
+            "description": "Unable to create author"
+          }
+        }
+      }
+    },
+    "/authors/{id}": {
+      "get": {
+        "summary": "Get author by ID",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The custom author ID, such as a1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A single author"
+          },
+          "404": {
+            "description": "Author not found"
+          },
+          "500": {
+            "description": "Unable to retrieve author"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update an author by ID",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The custom author ID, such as a1"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "name",
+                  "birthYear"
+                ],
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "birthYear": {
+                    "type": "number"
+                  }
+                }
+              },
+              "example": {
+                "name": "Updated Author",
+                "birthYear": 1981
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Author updated successfully"
+          },
+          "400": {
+            "description": "Missing required fields"
+          },
+          "404": {
+            "description": "Author not found"
+          },
+          "500": {
+            "description": "Unable to update author"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete an author by ID",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The custom author ID, such as a1"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Author deleted successfully"
+          },
+          "404": {
+            "description": "Author not found"
+          },
+          "409": {
+            "description": "Author cannot be deleted because books still reference the author"
+          },
+          "500": {
+            "description": "Unable to delete author"
+          }
+        }
+      }
     }
   },
   "components": {},
